<resources>
    <string name="app_name">PBUS</string>

    <string name="loading">Loading....</string>


    <!--error-->
    <string name="something_wrong">Something went wrong</string>
    <string name="underDev">Under development</string>
    <string name="error_msg_network">No Internet connection found check your\n connectivity or Try again</string>
    <string name="retry">Retry</string>
    <string name="submit">Submit</string>


    <!--session logout-->
    <string name="ok">OK</string>
    <string name="session_expired">Session Expired</string>
    <string name="your_session_is_expired_please_login_again">Your session is expired please login again</string>

    <!--layout data-->
    <string name="who_you_are">Who You Are ?</string>
    <string name="seller">Seller</string>
    <string name="driver">Driver</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_titl">Forgot Password</string>
    <string name="login">Login</string>
    <string name="alert">Alert!</string>
    <string name="no_bus">No Bus</string>
    <string name="from">From</string>
    <string name="source_location">Source Location</string>
    <string name="to">To</string>
    <string name="select_date">Select Date</string>
    <string name="search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="new_booking">New Booking</string>
    <string name="home">Home</string>
    <string name="email_id">Email Id</string>
    <string name="premium_bus_rapid_2018">Premium bus rapid@ 2018</string>
    <string name="my_profile">My Profile</string>
    <string name="contact_number">Contact Number</string>
    <string name="na">NA</string>
    <string name="address">Address</string>
    <string name="seller_id">Seller Id</string>
    <string name="no_buses_available">No Buses Available</string>
    <string name="available_buses">Available Buses</string>
    <string name="seats">Seats</string>
    <string name="fareDash">Fare - </string>
    <string name="total">Total</string>

    <string name="pickup_location">Pickup Location</string>
    <string name="destination_location">Destination Location</string>
    <string name="total_seats">Total Seats</string>
    <string name="fare">Fare</string>
    <string name="confirm_bookings">Confirm Bookings</string>

    <string name="bus_detail">Bus Details</string>

</resources>
