<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    android:focusableInTouchMode="true"
    tools:context="com.pbus.activity.LoginActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imgBack"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:padding="@dimen/_4sdp"
        app:srcCompat="@drawable/ic_back"/>

    <ImageView
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_gravity="center"
        android:src="@drawable/logo"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:theme="@style/MyTextTheme">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:maxLines="1"
            />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:theme="@style/MyTextTheme">

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:maxLines="1"
            />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_gravity="center_vertical">

        <CheckBox
            android:id="@+id/cbRemember"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="wrap_content"
          />

        <TextView
            android:layout_toRightOf="@id/cbRemember"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/loginNFieldTxt"
            android:fontFamily="@font/poppins_regular"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_11sdp"/>

        <TextView
            android:id="@+id/tvForgotPwd"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/loginNFieldTxt"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_11sdp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_gravity="center"
        android:layout_width="@dimen/_175sdp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/blue_rounded_corner_bg"
        android:text="@string/login"
        android:gravity="center"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"/>

</LinearLayout>
