<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/session_expired"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                   />
            </LinearLayout>

            <TextView
                android:id="@+id/service_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/your_session_is_expired_please_login_again"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_16sdp"
                />

            <LinearLayout
                android:id="@+id/okLay"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/blue_rounded_corner_bg"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                     />


            </LinearLayout>
        </LinearLayout>


</RelativeLayout>