<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pbus.fragment.common.ProfileFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/imgDrawerMenu"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/ic_menu_white" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgDrawerCancel"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_3sdp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_close_white" />


        <TextView
            android:id="@+id/tvToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/my_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_20sdp"
        android:paddingTop="@dimen/_20sdp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/ic_profile_holder" />

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="bottom|end"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_2sdp">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_photo_camera" />

            </android.support.v7.widget.CardView>

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:text="John Smith"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_2sdp"
                app:srcCompat="@drawable/ic_edit" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="Seller"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/contact_number"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/etContNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@null"
            android:hint="@string/na"
            android:inputType="number"
            android:maxLength="15" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@color/grey2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/email_id"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@null"
            android:hint="@string/na"
            android:inputType="textEmailAddress"
            android:maxLength="15" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@color/grey2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/address"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@null"
            android:hint="@string/na"
            android:inputType="textEmailAddress"
            android:maxLength="15" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@color/grey2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/seller_id"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/etSellerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@null"
            android:hint="@string/na"
            android:inputType="textEmailAddress"
            android:maxLength="15" />
    </RelativeLayout>

</LinearLayout>
