<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background"
    tools:context="com.pbus.activity.WelcomeActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="@dimen/_55sdp"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_gravity="center"
        android:src="@drawable/logo"/>


    <TextView
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:layout_gravity="center"
        android:text="@string/who_you_are"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/whoYouAre"
        />


    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/mainLaySeller"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_130sdp">

            <View
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/circle_grey"/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                app:srcCompat="@drawable/ic_seller"
                android:padding="@dimen/_25sdp"
                android:layout_gravity="top|center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/seller"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/grey2"/>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_2sdp"
                android:layout_gravity="top|right"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:visibility="gone"
                >

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_right"/>

            </android.support.v7.widget.CardView>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mainLayDriver"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_130sdp">

            <View
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/circle_grey"/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                app:srcCompat="@drawable/ic_driver"
                android:padding="@dimen/_25sdp"
                android:layout_gravity="top|center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center_horizontal|bottom"
                android:gravity="center"
                android:text="@string/driver"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/grey2"/>

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_2sdp"
                android:layout_gravity="top|right"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:visibility="gone"
                >

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_right"/>

            </android.support.v7.widget.CardView>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
