<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_2sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layTotalSeat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                android:background="@drawable/custom_avail_bus_bg"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:padding="@dimen/_2sdp"
                    app:srcCompat="@drawable/ic_bus_front" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTotalSeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="70"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                    <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:paddingLeft="@dimen/_2sdp"
                        android:paddingTop="@dimen/_4sdp"
                        android:text="@string/total"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_minus8sdp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/seats"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="QA-123769"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="West Chicago"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="08:00 AM Onwards"
                    android:textColor="@color/grey2"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/fareDash"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="$50"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>